--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Cool Project</title>
+    <title>jquery_accordians</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bundle.css">
   </head>
