--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>jquery_accordians</title>
+    <meta name="viewport" content="width=device-width">
     <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bundle.css">
